# galaxy-helper

./: .gitmodules  LICENSE  README.md  meson.build
.github/workflows/: build.yml
meson/: winegcc.txt
protocols/: README.md  galaxy.common.protocols.connection.pb-c.c  galaxy.common.protocols.connection.pb-c.h  galaxy.common.protocols.peer_common.pb-c.c  galaxy.common.protocols.peer_common.pb-c.h  galaxy.common.protocols.peer_to_peer.pb-c.c  galaxy.common.protocols.peer_to_peer.pb-c.h  galaxy.common.protocols.peer_to_server.pb-c.c  galaxy.common.protocols.peer_to_server.pb-c.h  galaxy.protocols.communication_service.pb-c.c  galaxy.protocols.communication_service.pb-c.h  galaxy.protocols.overlay_for_peer.pb-c.c  galaxy.protocols.overlay_for_peer.pb-c.h  galaxy.protocols.webbroker_service.pb-c.c  galaxy.protocols.webbroker_service.pb-c.h  gog.protocols.pb.pb-c.c  gog.protocols.pb.pb-c.h  meson.build
src/: galaxy.c  galaxy.h  main.c  meson.build  overlay.c  overlay.h  protocols.h  service.c  service.h  wine.c  wine.h
unixlib/: galaxyunixlib.def  main.c  meson.build  socket.c  socket.h
