protobuf_compiled = declare_dependency(
  sources: ['galaxy.common.protocols.connection.pb-c.c',
    'galaxy.common.protocols.peer_common.pb-c.c',
    'galaxy.common.protocols.peer_to_peer.pb-c.c',
    'galaxy.common.protocols.peer_to_server.pb-c.c',
    'galaxy.protocols.communication_service.pb-c.c',
    'galaxy.protocols.overlay_for_peer.pb-c.c',
    'galaxy.protocols.webbroker_service.pb-c.c',
    'gog.protocols.pb.pb-c.c'],
  include_directories: include_directories('.'))
